<!--
  ~
  -->

<resources>
    <string name="app_name">Oriéntate UNI</string>

    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="lugar">Lugar:</string>
    <string name="inscrip">Inscripción</string>
    <string name="ver_mas">Ver más</string>
    <string name="title_activity_evento_mes">EventoMesActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_evento_presenc_mes">EventoPresencMesActivity</string>
    <string name="no_disponible">No hay eventos disponibles</string>
    <string name="especialidades">Especialidades</string>
    <string name="puerta">Puerta</string>
    <string name="otro_lugar">Otro lugar de interes</string>
    <string name="facultad">Facultad</string>
</resources>
