<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/event_descr"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="0"
            android:text="@string/fecha"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/event_fecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="0"
            android:text="@string/hora"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:textAlignment="center"
            android:id="@+id/event_hora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="0"
            android:text="@string/lugar"
            android:textStyle="bold"
            android:layout_marginEnd="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_weight="1"
            android:id="@+id/event_lugar"
            android:textAlignment="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <Button
        android:id="@+id/bt_inscrip"
        android:layout_gravity="center"
        android:background="@drawable/bg_normal"
        android:minHeight="0dp"
        android:padding="4dp"
        android:textAllCaps="false"
        android:textColor="@color/colorDark"
        android:text="@string/inscrip"
        android:drawableEnd="@drawable/ic_forward_dark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


</LinearLayout>